--- a/danenberg_reproduction.html
+++ b/danenberg_reproduction.html
@@ -357,16 +357,16 @@ display: none;
 </div>
 
 
-<div id="r-markdown" class="section level2">
-<h2>R Markdown</h2>
-<p>I make some additional notes here.</p>
-<p>This is an R Markdown document. Markdown is a simple formatting
-syntax for authoring HTML, PDF, and MS Word documents. For more details
-on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be
-generated that includes both content as well as the output of any
-embedded R code chunks within the document. You can embed an R code
-chunk like this:</p>
+<div id="danenberg-reproduction" class="section level2">
+<h2>Danenberg reproduction</h2>
+<p>Here we aim to reproduce the results of the paper Breast tumor
+microenvironment structures are associated with genomic features and
+clinical outcome by Danenberg et al. (<a href="https://www.nature.com/articles/s41588-022-01041-y" class="uri">https://www.nature.com/articles/s41588-022-01041-y</a>). We
+focus on the description of the spatial organization of the TME as
+presented in figures 4b,d,f and its prognostic impact as seen in figure
+6.</p>
+<p>The separation and phenotype classification of single cells is not
+reproduced and these are retrieved from the original paper.</p>
 <pre class="r"><code>summary(cars)</code></pre>
 <pre><code>##      speed           dist       
 ##  Min.   : 4.0   Min.   :  2.00  
